--- a/style.css
+++ b/style.css
@@ -41,15 +41,17 @@ header{
 #div-bar{
     display: flex;
     align-items: center;
+    
 }
 
 #div-bar ul{
     display: flex;
     list-style: none;
-    font-size: 16pt;
+    
 }
 #div-bar li{
     padding-right: 10px;
+    font-size: calc(0.5em + 1.1vw);
 }
 
 .botao{
@@ -58,7 +60,7 @@ header{
 }
 
 main{
-    background-color: rgb(225, 225, 225);
+    background-color: #090a52;
 }
 
 #tit{
@@ -72,19 +74,24 @@ main{
     text-shadow: 1px 1px 7px rgba(0, 0, 0, 0.527);
 }
 
-#txt{
+.txt{
     height: 100%;
     width: 100%;
-    background-color: ;
+    color: white;
     max-width: 900px;
     margin: auto;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+    background-color: #0b0d67;
+    padding: 10px;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.671);
+    border-radius: 2px;
 }
 
-#txt p{
+.txt p{
     line-height: 2em;
     text-indent: 20px;
+    font-size: 16pt;
 }
 
 #fundo{
@@ -93,5 +100,33 @@ main{
     height: 40vh;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: bottom center;
+    background-position: center center;
 }
+
+.aulas{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+#cert1{
+    background-image: url('imagens/aula.jfif');
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: cover;  
+
+    width: 100%;
+    height: 400px;
+}
+
+#cert2{
+    background-image: url('imagens/certificado.jfif');
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    width: 100%;
+    height: 400px;
+}
+
