--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ a:hover{
 
 header{
     background-color: #050632;
-    padding: 10px;
+    
 }
 
 #image{
@@ -36,6 +36,7 @@ header{
 #nav-bar{
     display: flex;
     justify-content: space-around;
+    padding: 10px;
 }
 
 #div-bar{
@@ -54,10 +55,28 @@ header{
     font-size: calc(0.5em + 1.1vw);
 }
 
+/*Mobine menu*/
+.div-bar-mobile{
+    display: none;
+    text-align: center;
+}
+
+.div-bar-mobile ul{
+    list-style: none;
+}
+
+.div-bar-mobile li{
+    padding: 10px;
+    border-top: 1px solid white;
+}
+
+
+
 .botao{
     display: none;
     align-items: center;
 }
+
 
 main{
     background-color: #090a52;
@@ -129,4 +148,6 @@ main{
     width: 100%;
     height: 400px;
 }
+
+
 
