--- a/style.css
+++ b/style.css
@@ -84,13 +84,16 @@ main{
 
 #tit{
     height: 10vh;
-    font-size: calc(0.4em + 1.1 vw);
     align-items: center;
     justify-content: center;
     font-family: var(--fontprin);
     display: flex;
     background-color: rgb(225, 225, 225);
     text-shadow: 1px 1px 7px rgba(0, 0, 0, 0.527);
+}
+
+#tit h1{
+    font-size: calc(1.2em + 1.1vw);
 }
 
 .txt{
@@ -106,6 +109,7 @@ main{
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.671);
     border-radius: 2px;
 }
+
 
 .txt p{
     line-height: 2em;
