--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 
 *{
+    font-family: var(--fontprin);
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
@@ -90,6 +91,7 @@ main{
     display: flex;
     background-color: rgb(225, 225, 225);
     text-shadow: 1px 1px 7px rgba(0, 0, 0, 0.527);
+    
 }
 
 #tit h1{
