--- a/curso.css
+++ b/curso.css
@@ -70,12 +70,15 @@ main{
     float: right;
     display: inline;
     background-image: url('imagens/certificado.jpeg');
-    background-size: cover;
+    background-size: contain;
     background-position: center center;
+    background-repeat: no-repeat;
 
+    max-width: 500px;
+    max-height: 400px;
     height: 400px;
-    width: 500px;
-    margin: 20px;
+    width: 100%;
+    margin: 15px;
 }
 
 .texto{
