--- a/certificados.css
+++ b/certificados.css
@@ -10,117 +10,113 @@ h1 {
   font-family: sans-serif;
 }
 
-.container {
-  position: relative;
-  padding: 15px;
-  max-width: 640px;
-  margin: 0 auto;
+body {
   background-color: #050632;
 }
 
-.fundo-slider{
-    background-color: #050632;
-    height: 90vh;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-
-.gallery-wrapper {
-  overflow-x: auto;
-}
-
-.arrow-left,
-.arrow-right {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: auto;
-  bottom: 0;
-  font-size: 20px;
-  line-height: 250px;
-  width: 40px;
-  color: #fff;
-  transition: all 600ms ease-in-out;
-  background: linear-gradient(to left, transparent 0%, black 200%);
-  opacity: 0.1;
-  cursor: pointer;
-  border: none;
-}
-
-.arrow-left:hover,
-.arrow-right:hover {
-  opacity: 1;
-}
-
-.arrow-right {
-  right: 0;
-  left: auto;
-  text-align: right;
-  background: linear-gradient(to right, transparent 0%, black 200%);
-}
-
-.txt-certificado{
-    display: block;
-    text-align: center;
-    background-color: rgba(255, 255, 255, 0.726);
-    padding: 10px;
-    box-shadow: 0px 0px 7px black;
-    border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
-    width: 100%;
-    max-width: 900px;
-    height: 58%;
-}
-
-.gallery {
+.engloba {
+  height: 85vh;
   display: flex;
-  flex-flow: row nowrap;
-  gap: 15px;
+  justify-content: center;
+  align-items: center;
+}
+.content {
+  height: 500px;
+  width: 800px;
+  overflow: hidden;
 }
 
-.item {
-  width: 350px;
-  height: 250px;
-  flex-shrink: 0;
-  transition: all 600ms ease-in-out;
-  opacity: 0.5;
+.content .slide img {
+  width: 79%;
+  height: 100%;
+}
+.content .slide {
+  display: flex;
+  justify-content: center;
 }
 
-.current-item {
-  opacity: 1;
+.slides {
+  display: flex;
+  width: 1000%;
 }
-
-/* This is from w3schools */
-/* 
-  https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp */
-/* Hide scrollbar for Chrome, Safari and Opera */
-.gallery-wrapper::-webkit-scrollbar {
+input {
   display: none;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
-.gallery-wrapper {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+.navigation {
+  display: flex;
+  position: absolute;
+  top: 103%;
+  left: 38%;
 }
 
-.cyan {
-  background: cyan;
+.bar {
+  width: 15px;
+  height: 15px;
+  border: 2px solid white;
+  margin: 6px;
+  border-radius: 15px;
+  cursor: pointer;
+  transform: 0.5s ease;
 }
 
-.deeppink {
-  background: deeppink;
+.bar:hover {
+  background-color: white;
+  transition: 0.8s;
+}
+.slide {
+  width: 10%;
+  transition: 0.6s;
 }
 
-.turquoise {
-  background: turquoise;
+#slide1:checked ~ .s1 {
+  margin-left: 0;
 }
 
-.darkblue {
-  background: darkblue;
+#slide2:checked ~ .s1 {
+  margin-left: -10%;
 }
 
-.purple {
-  background: purple;
+#slide3:checked ~ .s1 {
+  margin-left: -20%;
+}
+
+#slide4:checked ~ .s1 {
+  margin-left: -30%;
+}
+
+#slide5:checked ~ .s1 {
+  margin-left: -40%;
+}
+#slide6:checked ~ .s1 {
+  margin-left: -50%;
+}
+
+#slide7:checked ~ .s1 {
+  margin-left: -60%;
+}
+
+#slide8:checked ~ .s1 {
+  margin-left: -70%;
+}
+
+#slide9:checked ~ .s1 {
+  margin-left: -80%;
+}
+
+#slide10:checked ~ .s1 {
+  margin-left: -90%;
+}
+
+.txt-certificado {
+  background-color: whitesmoke;
+  margin: auto;
+  max-width: 900px;
+
+  display:block; 
+  text-align: center;
+}
+
+.txt-certificado p{
+  text-indent: 10px;
 }
