--- a/projetos.css
+++ b/projetos.css
@@ -2,19 +2,35 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
+
     padding: 10px;
-}
-.hotel{
-    padding: 10px;
-    border: 2px solid black;
-    background-color: black;
-    border-radius: 2px;
-    color: white;
-    display: flex;
 }
 
-.hotel p {
+main{
+    background-image: linear-gradient(to left, #1921af, #43b6d3, #74c7e6, #cceeff, #fff, #090a52, #040434, #040434);
+}
+
+.dashboard{
+    padding: 0px 10px 10px 10px;
+    background-color: rgba(0, 0, 0, 0.532);
+    border-radius: 10px;
+    color: white;
+    margin: 10px;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.dashboard h3 {
     width: 300px;
     padding: 10px;
     text-indent: 10px;
+}
+
+.txt-projetos p{
+    background-color: black;
+    color: red;
+    padding: 5px;
+    text-align: center;
 }
