--- a/certificados.css
+++ b/certificados.css
@@ -119,6 +119,9 @@ input {
   .engloba {
     display: none;
   }
+  .container-menor{
+    padding: 3rem;
+  }
   .cert-menor {
     display: flex;
     flex-wrap: wrap;
@@ -126,11 +129,9 @@ input {
     justify-content: center;
     align-items: center;
 
-    padding: 10px;
   }
   .cert-image img {
     width: 100%;
     height: 100%;
-    padding: 10px;
   }
 }
