--- a/style.css
+++ b/style.css
@@ -1,160 +1,156 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&display=swap");
 
-
-:root{
-    --fontprin: 'Raleway', Arial, Helvetica, sans-serif;
+:root {
+  --fontprin: "Raleway", Arial, Helvetica, sans-serif;
 }
 
-*{
-    font-family: var(--fontprin);
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-    text-align: justify;
-
+* {
+  font-family: var(--fontprin);
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+  text-align: justify;
 }
 
-a{
-    text-decoration: none;
-    color: white;
+a {
+  text-decoration: none;
+  color: white;
 }
 
-a:hover{
-    text-decoration: underline;
+a:hover {
+  text-decoration: underline;
 }
 
-header{
-    background-color: #050632;
-    padding: 10px;
+header {
+  background-color: #050632;
+  padding: 10px;
 }
 
-#image{
-    border-radius: 50%;
-    width: 100px;
-    display: flex;
-    border: 2px solid white;
-    box-shadow: 0px 0px 7px rgba(255, 255, 255, 0.584);
+#image {
+  border-radius: 50%;
+  width: 100px;
+  display: flex;
+  border: 2px solid white;
+  box-shadow: 0px 0px 7px rgba(255, 255, 255, 0.584);
 }
 
-#nav-bar{
-    display: flex;
-    justify-content: space-around;
-    padding: 10px;
+#nav-bar {
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
 }
 
-#div-bar{
-    display: flex;
-    align-items: center;
-    
+#div-bar {
+  display: flex;
+  align-items: center;
 }
 
-#div-bar ul{
-    display: flex;
-    list-style: none;
-    
+#div-bar ul {
+  display: flex;
+  list-style: none;
 }
-#div-bar li{
-    padding-right: 10px;
-    font-size: calc(0.5em + 1.1vw);
+#div-bar li {
+  padding-right: 10px;
+  font-size: calc(0.5em + 1.1vw);
 }
 
 /*Mobine menu*/
-.div-bar-mobile{
-    display: none;
-    text-align: center;
+.div-bar-mobile {
+  display: none;
+  text-align: center;
 }
 
-.div-bar-mobile ul{
-    list-style: none;
+.div-bar-mobile ul {
+  list-style: none;
 }
 
-.div-bar-mobile li{
-    padding: 10px;
-    border-top: 1px solid white;
-    margin: auto;
+.div-bar-mobile li {
+  padding: 10px;
+  border-top: 1px solid white;
+  margin: auto;
 }
 
-.botao{
-    display: none;
-    align-items: center;
+.botao {
+  display: none;
+  align-items: center;
 }
 
-
-main{
-    background-color: #090a52;
+main {
+  background-color: #090a52;
 }
 
-#tit{
-    height: 10vh;
-    align-items: center;
-    justify-content: center;
-    font-family: var(--fontprin);
-    display: flex;
-    background-color: rgb(225, 225, 225);
-    text-shadow: 1px 1px 7px rgba(0, 0, 0, 0.527);
-    
+#tit {
+  height: 10vh;
+  align-items: center;
+  justify-content: center;
+  font-family: var(--fontprin);
+  display: flex;
+  background-color: rgb(225, 225, 225);
+  text-shadow: 1px 1px 7px rgba(0, 0, 0, 0.527);
 }
 
-#tit h1{
-    font-size: calc(1.2em + 1.1vw);
+#tit h1 {
+  font-size: calc(1.2em + 1.1vw);
 }
 
-.txt{
-    height: 100%;
-    width: 100%;
-    color: white;
-    max-width: 900px;
-    margin: auto;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    background-color: #0b0d67;
-    padding: 10px;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.671);
-    border-radius: 2px;
+.txt {
+  height: 100%;
+  width: 100%;
+  color: white;
+  max-width: 900px;
+  margin: auto;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  background-color: #0b0d67;
+  padding: 10px;
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.671);
+  border-radius: 2px;
 }
 
-
-.txt p{
-    line-height: 2em;
-    text-indent: 20px;
-    font-size: 16pt;
+.txt p {
+  line-height: 2em;
+  text-indent: 20px;
+  font-size: 16pt;
 }
 
-#fundo{
-    background-image: url('imagens/fundo.jpg');
-    background-size: cover;
-    height: 40vh;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center center;
+#fundo {
+  background-image: url("imagens/fundo.jpg");
+  background-size: cover;
+  height: 40vh;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center center;
 }
 
-.aulas{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
+.aulas {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
-#cert1{
-    background-image: url('imagens/aula.jfif');
-    background-position: top center;
-    background-repeat: no-repeat;
-    background-size: cover;  
+#cert1 {
+  background-image: url("imagens/aula.jfif");
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
-    width: 100%;
-    height: 400px;
+  width: 100%;
+  height: 400px;
 }
 
-#cert2{
-    background-image: url('imagens/certificado.jfif');
-    background-position: top center;
-    background-repeat: no-repeat;
-    background-size: cover;
+#cert2 {
+  background-image: url("imagens/certificado.jfif");
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
-    width: 100%;
-    height: 400px;
+  width: 100%;
+  height: 400px;
 }
 
-
-
+@media screen and (max-height: 330px) {
+  #tit {
+    padding: 25px;
+  }
+}
